# ctp2hs

./: .gitignore  README.md  Setup.hs  ctp2hs.cabal  package.yaml  stack.yaml
app/Conv/: Main.hs
app/Example/MD/: Main.hs
app/Example/TD/: Main.hs
app/Sample/: MD.hs  TD.hs
cbits/: ffi.cc  ffi.h  ffi_struct.h  spi.cc  spi.h  spi_ffi.h
cbits/ctp/: ThostFtdcUserApiDataType.h
src/Bindings/Ctp/: Define.chs  MD.chs  Marshal.hs  Struct.chs  TD.chs  Utils.hs
