name:                  ctp2hs
version:               0.1.0.0
description:           Haskell bindings for ctp
homepage:              https://github.com/0x530c/ctp2hs#readme
license:               MIT
license-file:          LICENSE
author:                0x530c
maintainer:            0x530c@gmail.com
copyright:             Copyright: (c) 0x530c
category:              Bindings
build-type:            Custom
cabal-version:         >= 2.0
extra-source-files:    README.md
                     , cbits/*.h
                     , cbits/ctp/*.h
                     , cbits/ctp/*.so

custom-setup
  setup-depends:       base
                     , Cabal >= 2.0
                     , directory

library
  hs-source-dirs:      src
  exposed-modules:     Bindings.Ctp.Define
                     , Bindings.Ctp.Struct
                     , Bindings.Ctp.MD
                     , Bindings.Ctp.TD
  other-modules:       Bindings.Ctp.Utils
  include-dirs:        cbits
  includes:            ctp/ThostFtdcUserApiDataType.h
                     , ctp/ThostFtdcUserApiStruct.h
                     , spi_ffi.h
                     , ffi.h
  c-sources:           cbits/spi.cc
                     , cbits/ffi.cc
  extra-libraries:     stdc++
                     , thostmduserapi
                     , thosttraderapi
  ghc-options:         -Wall
  build-tools:         c2hs
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , iconv
                     , utf8-string
  default-language:    Haskell2010

executable md
  hs-source-dirs:      app/Sample
  main-is:             MD.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
                       -optl-Wl,-rpath,cbits/ctp
  build-depends:       base
                     , ctp2hs
                     , optparse-applicative
                     , stm
  default-language:    Haskell2010

executable td
  hs-source-dirs:      app/Sample
  main-is:             TD.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
                       -optl-Wl,-rpath,cbits/ctp
  build-depends:       base
                     , ctp2hs
                     , optparse-applicative
                     , stm
  default-language:    Haskell2010

executable conv
  hs-source-dirs:      app/Conv
  main-is:             Conv.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -Wall
  build-depends:       base
                     , bytestring
                     , containers
                     , iconv
                     , language-c
                     , optparse-applicative
                     , regex-posix
                     , split
                     , utf8-string
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/0x530c/ctp2hs
